fixing spacing

--- a/style.css
+++ b/style.css
@@ -2779,7 +2779,7 @@ footer .logo-img {
     gap: 1.3vw;
     padding-top: 0.7vw;
     position: relative;
-    left: -3vw;
+    left: -4vh;
 }
 
 .column p {
